--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,7 +13,7 @@
     --fs-lg: 30px;
     --fs-md: 16px;
     --fs-sm: 14px;
-    --fs-xs: 22px;
+    --fs-xs: 12px;
     --fs-xxs: 10px;
     --transition: .5s ease;
     --shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -62,6 +62,11 @@ select:focus {
     box-shadow: none !important;
     border: 2px solid var(--blue-dark) !important;
 }
+
+.form-floating label {
+    background-color: transparent !important;
+}
+
 
 button {
     border: 2px solid var(--black);
@@ -371,6 +376,37 @@ button:hover i {
     font-weight: 700;
 }
 
+.owner p {
+    font-size: var(--fs-sm);
+}
+
+/* sidelit */
+.box-sidelist {
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
+}
+
+.box-sidelist h1 {
+    font-size: var(--fs-lg);
+}
+
+
+.sidelist img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.sidelist h1 {
+    font-size: var(--fs-md);
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.sidelist p {
+    font-size: var(--fs-sm);
+}
+
 /* loading */
 .loading-conatiner {
     height: 20rem;
@@ -418,20 +454,20 @@ button:hover i {
 .modal-content {
     background-color: var(--white);
     border-radius: var(--border-radius);
-    box-shadow: var(--shadow);
+    box-shadow: var(--shadow) !important;
 }
 
 .modal-content h1 {
-    color: var(--blue-dark);
-    font-size: var(--fs-lg);
-    font-weight: bold;
-    font-family: var(--font-red);
-    text-transform: uppercase;
+    color: var(--blue-dark) !important;
+    font-size: var(--fs-lg) !important;
+    font-weight: bold !important;
+    font-family: var(--font-red) !important;
+    text-transform: uppercase !important;
 }
 
 .modal-header,
 .modal-footer {
-    border: none;
+    border: none !important;
 }
 
 /* alert */
@@ -443,7 +479,42 @@ button:hover i {
     border: none;
 }
 
+/* search */
+#searchHouses .reult {
+    color: var(--grey);
+    font-size: var(--fs-sm);
+}
 
+#searchHouses .search-suggest-item {
+    border-radius: var(--border-radius);
+    font-size: var(--fs-sm);
+    transition: var(--transition);
+}
+
+#searchHouses .search-suggest-item:hover {
+    box-shadow: var(--shadow);
+}
+
+#searchHouses .search-suggest-item h1 {
+    font-size: var(--fs-sm) !important;
+    color: var(--black) !important;
+}
+
+#searchHouses .search-suggest-item p {
+    font-size: var(--fs-xxs);
+    color: var(--grey);
+    text-align: start !important;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+#searchHouses .search-suggest-item img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
 
 @media (max-width: 992px) {
     .home h1 {
